style: fix: 1.13: settings: toolbar search: extra padding around field

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -314,6 +314,7 @@
             margin-bottom: 0;
             &:not(.is-mobile &) {
                 padding-bottom: unset;
+                padding-inline: unset;
             }
             & .setting-item-info {
                 display: none;
